    - Added "examples/qasm/coin_flip.qasm" coin flipping OpenQASM example that
      can be run, e.g., with 'qasm < coin_flip.qasm [number of reps]'
    - qpp::measure() deducts the input state type (`qpp::ket` or `qpp::cmat`)
      and returns accordingly a set of kets or density matrices in its return
      tuple, thanks @anoine-bussy (https://github.com/antoine-bussy)
    - Minor refactoring and code simplifications

Version 2.6 - 9 January 2021
    - Added Quantum Phase Estimation low-level API example in
      "examples/qpe.cpp", courtesy of @ryanhill1, see
      https://github.com/softwareQinc/qpp/pull/91
    - Added Quantum Phase Estimation high-level API example in
      "examples/circuits/quantum_phase_estimation.cpp", thanks @DevelopDaily for
      the suggestion, https://github.com/softwareQinc/qpp/issues/96
    - qpp::load() and qpp::save() ["input_output.hpp"] now use C++ I/O streams
      instead of file names, and load/save in text format (instead of
      binary format), while preserving the required precision. The old load/save
      functions that use binary files for I/O are now moved to the qpp::obsolete
      namespace and are deprecated.
    - Minor API changes:
        ["MATLAB/matlab.hpp"]
          - qpp::saveMATLAB() -> qpp::save_MATLAB()
          - qpp::loadMATLAB() -> qpp::load_MATLAB()
        ["classes/circuits/circuits.hpp"]
          - qpp::cCTRL_custom() -> qpp::cCTRL_joint()
          - qpp::CTRL_custom()  -> qpp::CTRL_joint()
          - qpp::gate_custom()  -> qpp::gate_joint()
    - Documentation improvements in ["classes/circuits/circuits.hpp"]
    - Updated Travis CI configuration

Version 2.5 - 28 November 2020
    - Significant improvements in qpp::QEngine::execute() for multiple runs
    - Changed all header extensions from ".h" to ".hpp" (except for "qpp.h")
    - Automatic OpenMP detection by CMake
    - CMake minimum required version bumped to 3.9 (3.12 for macOS) for
      automatic OpenMP detection